# tech-update-recommender

./: .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  LICENSE  PLAN.md  README.md  gitignore  pyproject.toml  tech-upd-report.md
depscope/: __init__.py  __main__.py  cli.py  config.py  depsdev_module.py  llm_module.py  models.py  report.py  syft_module.py  utils.py
docs/: depscope.yaml.example  tech-update-recommender.yaml.example
docs/blocks/: 01-skeleton.md  02-syft-module.md  03-depsdev-module.md  04-report-module.md  05-llm-module.md  06-integration.md
tech_update_recommender/: __init__.py  __main__.py  cache.py  cli.py  config.py  depsdev_module.py  llm_module.py  models.py  report.py  syft_module.py  utils.py
tests/: conftest.py  test_config.py  test_depsdev_module.py  test_integration.py  test_llm_module.py  test_models.py  test_report.py  test_syft_module.py
tests/fixtures/: cyclonedx_broken.json  cyclonedx_empty.json  cyclonedx_maven.json  cyclonedx_mixed.json  cyclonedx_simple.json  depsdev_404.json  depsdev_batch_response.json  depsdev_getpackage_express.json
