[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tech-upd-recommender"
version = "0.2.1"
description = "Open-source CLI utility for local dependency analysis with AI-powered update recommendations."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Alimhux", email = "slavyan1011@gmail.com" },
]
keywords = ["dependencies", "sbom", "syft", "deps.dev", "security", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Security",
]
dependencies = [
    "click",
    "packageurl-python",
    "packaging",
    "aiohttp",
    "pydantic>=2",
    "rich",
    "pyyaml",
    "litellm",
    "certifi",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "aioresponses",
    "ruff",
]

[project.scripts]
tech-upd-recommender = "tech_update_recommender.cli:main"

[project.urls]
Homepage = "https://github.com/Alimhux/tech-update-recommender"
Issues = "https://github.com/Alimhux/tech-update-recommender/issues"

[tool.hatch.build.targets.wheel]
packages = ["tech_update_recommender"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
